updated country-app link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 pt-2">
               <li class="nav-item">
                 <a
-                  class="nav-link active btn btn-primary mx-1"
+                  class="nav-link btn btn-primary mx-1"
                   aria-current="page"
                   href="#"
                   >Home</a
@@ -190,7 +190,7 @@
                 >GitHub</a
               >
               <a
-                href="https://lnkd.in/du6UhGrG"
+                href="https://silvernusifoghale.github.io/countries-app/"
                 target="_blank"
                 class="btn btn-primary m-1"
                 >Live Demo</a
